--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -58,8 +58,12 @@ h3,
 h4,
 h5,
 h6 {
-  color: var(--text-primary); /* Set heading text color */
-  margin: 0; /* Reset default margin */
+  color: var(--text-primary);
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
 
 .ellipsis {
