--- a/src/features/popular-movies/pages/popular-movies/popular-movies.scss
+++ b/src/features/popular-movies/pages/popular-movies/popular-movies.scss
@@ -13,7 +13,7 @@
   padding: 10px 0;
   text-align: center;
   color: var(--text-light);
-  background-color: var(--primary-900);
+  background-color: var(--grey-900);
   font-weight: 500;
 }
 
