--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,8 @@
   --primary-700: #1d4ed8; /* Darker primary for active states */
   --primary-900: #050f2a;
 
+  --grey-900: #181b22; /* Dark grey for text */
+
   /* Accent colors for highlights or warnings */
   --accent-100: #f5e7b2; /* Darker light accent background */
   --accent-500: #b46307; /* Darker main accent color */
